<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageTheSimpsonTitle"
        android:layout_width="289dp"
        android:layout_height="103dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/animation_list_the_simpson_title"
        app:layout_constraintBottom_toTopOf="@+id/imageViewHomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewHomer"
        android:layout_width="223dp"
        android:layout_height="449dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTheSimpsonTitle"
        app:srcCompat="@drawable/homer_simpson"
        android:contentDescription="@string/imagen_homer" />

    <ImageView
        android:id="@+id/imageViewDonut"
        android:layout_width="145dp"
        android:layout_height="149dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="242dp"
        android:onClick="playSimpsonSong"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewHomer"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTheSimpsonTitle"
        app:layout_constraintVertical_bias="0.625"
        app:srcCompat="@drawable/donut"
        android:contentDescription="@string/imagen_donut" />

    <ImageView
        android:id="@+id/imageViewAzul"
        android:layout_width="43dp"
        android:layout_height="51dp"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewHomer"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="@+id/imageViewHomer"
        app:layout_constraintTop_toTopOf="@+id/imageViewHomer"
        app:srcCompat="@drawable/engranatge_blau"
        android:contentDescription="@string/imagen_engranaje_azul" />

    <ImageView
        android:id="@+id/imageViewRojo"
        android:layout_width="69dp"
        android:layout_height="68dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewHomer"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="@+id/imageViewHomer"
        app:layout_constraintTop_toTopOf="@+id/imageViewHomer"
        app:srcCompat="@drawable/engranatge_vermell"
        android:contentDescription="@string/imagen_engranaje_rojo" />

    <ImageView
        android:id="@+id/imageViewVerde"
        android:layout_width="59dp"
        android:layout_height="61dp"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewHomer"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="@+id/imageViewHomer"
        app:layout_constraintTop_toTopOf="@+id/imageViewHomer"
        app:srcCompat="@drawable/engranatge_verd"
        android:contentDescription="@string/imagen_engranaje_verde" />

    <ImageView
        android:id="@+id/imageViewOjo"
        android:layout_width="41dp"
        android:layout_height="49dp"
        android:layout_marginTop="184dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewHomer"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="@+id/imageViewHomer"
        app:layout_constraintTop_toTopOf="@+id/imageViewHomer"
        app:srcCompat="@drawable/ull"
        android:contentDescription="@string/imagen_ojo_homer" />

</android.support.constraint.ConstraintLayout>